src/grammar.output
Terminals unused in grammar

    UNKOWN


State 153 conflicts: 1 shift/reduce


Grammar

    0 $accept: class_list $end

    1 class_list: class_declaration class_klein

    2 class_klein: class_declaration class_klein
    3            | %empty

    4 class_declaration: KEYWORD_CLASS ID OPEN_BRACE member_declaration_klein CLOSE_BRACE SEMICOLON
    5                  | KEYWORD_CLASS ID KEYWORD_EXTENDS ID OPEN_BRACE member_declaration_klein CLOSE_BRACE SEMICOLON

    6 member_declaration: type ID SEMICOLON
    7                   | type ID OPEN_PARENTHESIS formals_list CLOSE_PARENTHESIS OPEN_BRACE statement_klein CLOSE_BRACE
    8                   | ID OPEN_PARENTHESIS formals_list CLOSE_PARENTHESIS OPEN_BRACE statement_klein CLOSE_BRACE

    9 member_declaration_klein: member_declaration member_declaration_klein
   10                         | %empty

   11 statement: expr SEMICOLON
   12          | type ID SEMICOLON
   13          | lvalue ASSIGN expr SEMICOLON
   14          | KEYWORD_IF OPEN_PARENTHESIS expr CLOSE_PARENTHESIS statement
   15          | KEYWORD_IF OPEN_PARENTHESIS expr CLOSE_PARENTHESIS statement KEYWORD_ELSE statement
   16          | KEYWORD_WHILE OPEN_PARENTHESIS expr CLOSE_PARENTHESIS statement
   17          | OPEN_BRACE statement_klein CLOSE_BRACE
   18          | KEYWORD_RETURN expr SEMICOLON
   19          | KEYWORD_RETURN SEMICOLON
   20          | KEYWORD_PRINT_INT OPEN_PARENTHESIS expr CLOSE_PARENTHESIS SEMICOLON
   21          | KEYWORD_PRINT_BOOL OPEN_PARENTHESIS expr CLOSE_PARENTHESIS SEMICOLON
   22          | KEYWORD_PRINT_LN OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
   23          | SEMICOLON

   24 statement_klein: statement statement_klein
   25                | %empty

   26 actuals: expr actuals_optional
   27        | %empty

   28 actuals_optional: COMMA expr actuals_optional
   29                 | %empty

   30 expr: expr TIMES expr
   31     | expr DIVIDE expr
   32     | expr PLUS expr
   33     | expr MINUS expr
   34     | OPEN_PARENTHESIS expr CLOSE_PARENTHESIS
   35     | expr AND expr
   36     | expr OR expr
   37     | expr EQUIVALENT expr
   38     | expr IS_NOT_EQUAL expr
   39     | expr LESS_THAN_OR_EQUAL expr
   40     | expr LESS_THAN expr
   41     | expr GREATER_THAN_OR_EQUAL expr
   42     | expr GREATER_THAN expr
   43     | MINUS expr
   44     | NEGATE expr
   45     | INTEGER
   46     | KEYWORD_TRUE
   47     | KEYWORD_FALSE
   48     | KEYWORD_NEW ID OPEN_PARENTHESIS actuals CLOSE_PARENTHESIS
   49     | KEYWORD_NEW type OPEN_SQUARE expr CLOSE_SQUARE
   50     | lvalue

   51 lvalue: ID
   52       | ID OPEN_PARENTHESIS actuals CLOSE_PARENTHESIS
   53       | lvalue OPEN_SQUARE expr CLOSE_SQUARE
   54       | lvalue DOT ID
   55       | lvalue DOT ID OPEN_PARENTHESIS actuals CLOSE_PARENTHESIS
   56       | KEYWORD_THIS

   57 type: KEYWORD_INT
   58     | KEYWORD_BOOL
   59     | KEYWORD_VOID
   60     | ID
   61     | KEYWORD_INT SQUARE_PAIR
   62     | KEYWORD_BOOL SQUARE_PAIR
   63     | KEYWORD_VOID SQUARE_PAIR
   64     | ID SQUARE_PAIR

   65 formal: type ID

   66 formals_list: formal formals_optional
   67             | %empty

   68 formals_optional: COMMA formal formals_optional
   69                 | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SEMICOLON (258) 4 5 6 11 12 13 18 19 20 21 22 23
    COMMA (259) 28 68
    KEYWORD_NEW (260) 48 49
    KEYWORD_RETURN (261) 18 19
    KEYWORD_PRINT_INT (262) 20
    KEYWORD_PRINT_BOOL (263) 21
    KEYWORD_PRINT_LN (264) 22
    OPEN_SQUARE (265) 49 53
    CLOSE_SQUARE (266) 49 53
    ASSIGN (267) 13
    LESS_THAN_OR_EQUAL (268) 39
    GREATER_THAN_OR_EQUAL (269) 41
    EQUIVALENT (270) 37
    IS_NOT_EQUAL (271) 38
    LESS_THAN (272) 40
    GREATER_THAN (273) 42
    OR (274) 36
    AND (275) 35
    MINUS (276) 33 43
    PLUS (277) 32
    DIVIDE (278) 31
    TIMES (279) 30
    NEGATE (280) 44
    DOT (281) 54 55
    OPEN_PARENTHESIS (282) 7 8 14 15 16 20 21 22 34 48 52 55
    CLOSE_PARENTHESIS (283) 7 8 14 15 16 20 21 22 34 48 52 55
    OPEN_BRACE (284) 4 5 7 8 17
    CLOSE_BRACE (285) 4 5 7 8 17
    SQUARE_PAIR (286) 61 62 63 64
    KEYWORD_WHILE (287) 16
    KEYWORD_IF (288) 14 15
    KEYWORD_ELSE (289) 15
    KEYWORD_THIS (290) 56
    KEYWORD_CLASS (291) 4 5
    KEYWORD_EXTENDS (292) 5
    KEYWORD_INT (293) 57 61
    KEYWORD_BOOL (294) 58 62
    KEYWORD_VOID (295) 59 63
    KEYWORD_TRUE <val> (296) 46
    KEYWORD_FALSE <val> (297) 47
    INTEGER <val> (298) 45
    ID <id> (299) 4 5 6 7 8 12 48 51 52 54 55 60 64 65
    UNKOWN (300)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    class_list <class_list> (47)
        on left: 1
        on right: 0
    class_klein <class_list> (48)
        on left: 2 3
        on right: 1 2
    class_declaration <clazz> (49)
        on left: 4 5
        on right: 1 2
    member_declaration <member_declaration> (50)
        on left: 6 7 8
        on right: 9
    member_declaration_klein <member_declaration_list> (51)
        on left: 9 10
        on right: 4 5 9
    statement <statement> (52)
        on left: 11 12 13 14 15 16 17 18 19 20 21 22 23
        on right: 14 15 16 24
    statement_klein <body> (53)
        on left: 24 25
        on right: 7 8 17 24
    actuals <actual> (54)
        on left: 26 27
        on right: 48 52 55
    actuals_optional <actual> (55)
        on left: 28 29
        on right: 26 28
    expr <expr> (56)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 11 13 14 15 16 18 20 21 26 28 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 49 53
    lvalue <lvalue> (57)
        on left: 51 52 53 54 55 56
        on right: 13 50 53 54 55
    type <type> (58)
        on left: 57 58 59 60 61 62 63 64
        on right: 6 7 12 49 65
    formal <formal> (59)
        on left: 65
        on right: 66 68
    formals_list <formals> (60)
        on left: 66 67
        on right: 7 8
    formals_optional <formals> (61)
        on left: 68 69
        on right: 66 68


State 0

    0 $accept: . class_list $end

    KEYWORD_CLASS  shift, and go to state 1

    class_list         go to state 2
    class_declaration  go to state 3


State 1

    4 class_declaration: KEYWORD_CLASS . ID OPEN_BRACE member_declaration_klein CLOSE_BRACE SEMICOLON
    5                  | KEYWORD_CLASS . ID KEYWORD_EXTENDS ID OPEN_BRACE member_declaration_klein CLOSE_BRACE SEMICOLON

    ID  shift, and go to state 4


State 2

    0 $accept: class_list . $end

    $end  shift, and go to state 5


State 3

    1 class_list: class_declaration . class_klein

    KEYWORD_CLASS  shift, and go to state 1

    $default  reduce using rule 3 (class_klein)

    class_klein        go to state 6
    class_declaration  go to state 7


State 4

    4 class_declaration: KEYWORD_CLASS ID . OPEN_BRACE member_declaration_klein CLOSE_BRACE SEMICOLON
    5                  | KEYWORD_CLASS ID . KEYWORD_EXTENDS ID OPEN_BRACE member_declaration_klein CLOSE_BRACE SEMICOLON

    OPEN_BRACE       shift, and go to state 8
    KEYWORD_EXTENDS  shift, and go to state 9


State 5

    0 $accept: class_list $end .

    $default  accept


State 6

    1 class_list: class_declaration class_klein .

    $default  reduce using rule 1 (class_list)


State 7

    2 class_klein: class_declaration . class_klein

    KEYWORD_CLASS  shift, and go to state 1

    $default  reduce using rule 3 (class_klein)

    class_klein        go to state 10
    class_declaration  go to state 7


State 8

    4 class_declaration: KEYWORD_CLASS ID OPEN_BRACE . member_declaration_klein CLOSE_BRACE SEMICOLON

    KEYWORD_INT   shift, and go to state 11
    KEYWORD_BOOL  shift, and go to state 12
    KEYWORD_VOID  shift, and go to state 13
    ID            shift, and go to state 14

    $default  reduce using rule 10 (member_declaration_klein)

    member_declaration        go to state 15
    member_declaration_klein  go to state 16
    type                      go to state 17


State 9

    5 class_declaration: KEYWORD_CLASS ID KEYWORD_EXTENDS . ID OPEN_BRACE member_declaration_klein CLOSE_BRACE SEMICOLON

    ID  shift, and go to state 18


State 10

    2 class_klein: class_declaration class_klein .

    $default  reduce using rule 2 (class_klein)


State 11

   57 type: KEYWORD_INT .
   61     | KEYWORD_INT . SQUARE_PAIR

    SQUARE_PAIR  shift, and go to state 19

    $default  reduce using rule 57 (type)


State 12

   58 type: KEYWORD_BOOL .
   62     | KEYWORD_BOOL . SQUARE_PAIR

    SQUARE_PAIR  shift, and go to state 20

    $default  reduce using rule 58 (type)


State 13

   59 type: KEYWORD_VOID .
   63     | KEYWORD_VOID . SQUARE_PAIR

    SQUARE_PAIR  shift, and go to state 21

    $default  reduce using rule 59 (type)


State 14

    8 member_declaration: ID . OPEN_PARENTHESIS formals_list CLOSE_PARENTHESIS OPEN_BRACE statement_klein CLOSE_BRACE
   60 type: ID .
   64     | ID . SQUARE_PAIR

    OPEN_PARENTHESIS  shift, and go to state 22
    SQUARE_PAIR       shift, and go to state 23

    $default  reduce using rule 60 (type)


State 15

    9 member_declaration_klein: member_declaration . member_declaration_klein

    KEYWORD_INT   shift, and go to state 11
    KEYWORD_BOOL  shift, and go to state 12
    KEYWORD_VOID  shift, and go to state 13
    ID            shift, and go to state 14

    $default  reduce using rule 10 (member_declaration_klein)

    member_declaration        go to state 15
    member_declaration_klein  go to state 24
    type                      go to state 17


State 16

    4 class_declaration: KEYWORD_CLASS ID OPEN_BRACE member_declaration_klein . CLOSE_BRACE SEMICOLON

    CLOSE_BRACE  shift, and go to state 25


State 17

    6 member_declaration: type . ID SEMICOLON
    7                   | type . ID OPEN_PARENTHESIS formals_list CLOSE_PARENTHESIS OPEN_BRACE statement_klein CLOSE_BRACE

    ID  shift, and go to state 26


State 18

    5 class_declaration: KEYWORD_CLASS ID KEYWORD_EXTENDS ID . OPEN_BRACE member_declaration_klein CLOSE_BRACE SEMICOLON

    OPEN_BRACE  shift, and go to state 27


State 19

   61 type: KEYWORD_INT SQUARE_PAIR .

    $default  reduce using rule 61 (type)


State 20

   62 type: KEYWORD_BOOL SQUARE_PAIR .

    $default  reduce using rule 62 (type)


State 21

   63 type: KEYWORD_VOID SQUARE_PAIR .

    $default  reduce using rule 63 (type)


State 22

    8 member_declaration: ID OPEN_PARENTHESIS . formals_list CLOSE_PARENTHESIS OPEN_BRACE statement_klein CLOSE_BRACE

    KEYWORD_INT   shift, and go to state 11
    KEYWORD_BOOL  shift, and go to state 12
    KEYWORD_VOID  shift, and go to state 13
    ID            shift, and go to state 28

    $default  reduce using rule 67 (formals_list)

    type          go to state 29
    formal        go to state 30
    formals_list  go to state 31


State 23

   64 type: ID SQUARE_PAIR .

    $default  reduce using rule 64 (type)


State 24

    9 member_declaration_klein: member_declaration member_declaration_klein .

    $default  reduce using rule 9 (member_declaration_klein)


State 25

    4 class_declaration: KEYWORD_CLASS ID OPEN_BRACE member_declaration_klein CLOSE_BRACE . SEMICOLON

    SEMICOLON  shift, and go to state 32


State 26

    6 member_declaration: type ID . SEMICOLON
    7                   | type ID . OPEN_PARENTHESIS formals_list CLOSE_PARENTHESIS OPEN_BRACE statement_klein CLOSE_BRACE

    SEMICOLON         shift, and go to state 33
    OPEN_PARENTHESIS  shift, and go to state 34


State 27

    5 class_declaration: KEYWORD_CLASS ID KEYWORD_EXTENDS ID OPEN_BRACE . member_declaration_klein CLOSE_BRACE SEMICOLON

    KEYWORD_INT   shift, and go to state 11
    KEYWORD_BOOL  shift, and go to state 12
    KEYWORD_VOID  shift, and go to state 13
    ID            shift, and go to state 14

    $default  reduce using rule 10 (member_declaration_klein)

    member_declaration        go to state 15
    member_declaration_klein  go to state 35
    type                      go to state 17


State 28

   60 type: ID .
   64     | ID . SQUARE_PAIR

    SQUARE_PAIR  shift, and go to state 23

    $default  reduce using rule 60 (type)


State 29

   65 formal: type . ID

    ID  shift, and go to state 36


State 30

   66 formals_list: formal . formals_optional

    COMMA  shift, and go to state 37

    $default  reduce using rule 69 (formals_optional)

    formals_optional  go to state 38


State 31

    8 member_declaration: ID OPEN_PARENTHESIS formals_list . CLOSE_PARENTHESIS OPEN_BRACE statement_klein CLOSE_BRACE

    CLOSE_PARENTHESIS  shift, and go to state 39


State 32

    4 class_declaration: KEYWORD_CLASS ID OPEN_BRACE member_declaration_klein CLOSE_BRACE SEMICOLON .

    $default  reduce using rule 4 (class_declaration)


State 33

    6 member_declaration: type ID SEMICOLON .

    $default  reduce using rule 6 (member_declaration)


State 34

    7 member_declaration: type ID OPEN_PARENTHESIS . formals_list CLOSE_PARENTHESIS OPEN_BRACE statement_klein CLOSE_BRACE

    KEYWORD_INT   shift, and go to state 11
    KEYWORD_BOOL  shift, and go to state 12
    KEYWORD_VOID  shift, and go to state 13
    ID            shift, and go to state 28

    $default  reduce using rule 67 (formals_list)

    type          go to state 29
    formal        go to state 30
    formals_list  go to state 40


State 35

    5 class_declaration: KEYWORD_CLASS ID KEYWORD_EXTENDS ID OPEN_BRACE member_declaration_klein . CLOSE_BRACE SEMICOLON

    CLOSE_BRACE  shift, and go to state 41


State 36

   65 formal: type ID .

    $default  reduce using rule 65 (formal)


State 37

   68 formals_optional: COMMA . formal formals_optional

    KEYWORD_INT   shift, and go to state 11
    KEYWORD_BOOL  shift, and go to state 12
    KEYWORD_VOID  shift, and go to state 13
    ID            shift, and go to state 28

    type    go to state 29
    formal  go to state 42


State 38

   66 formals_list: formal formals_optional .

    $default  reduce using rule 66 (formals_list)


State 39

    8 member_declaration: ID OPEN_PARENTHESIS formals_list CLOSE_PARENTHESIS . OPEN_BRACE statement_klein CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 43


State 40

    7 member_declaration: type ID OPEN_PARENTHESIS formals_list . CLOSE_PARENTHESIS OPEN_BRACE statement_klein CLOSE_BRACE

    CLOSE_PARENTHESIS  shift, and go to state 44


State 41

    5 class_declaration: KEYWORD_CLASS ID KEYWORD_EXTENDS ID OPEN_BRACE member_declaration_klein CLOSE_BRACE . SEMICOLON

    SEMICOLON  shift, and go to state 45


State 42

   68 formals_optional: COMMA formal . formals_optional

    COMMA  shift, and go to state 37

    $default  reduce using rule 69 (formals_optional)

    formals_optional  go to state 46


State 43

    8 member_declaration: ID OPEN_PARENTHESIS formals_list CLOSE_PARENTHESIS OPEN_BRACE . statement_klein CLOSE_BRACE

    SEMICOLON           shift, and go to state 47
    KEYWORD_NEW         shift, and go to state 48
    KEYWORD_RETURN      shift, and go to state 49
    KEYWORD_PRINT_INT   shift, and go to state 50
    KEYWORD_PRINT_BOOL  shift, and go to state 51
    KEYWORD_PRINT_LN    shift, and go to state 52
    MINUS               shift, and go to state 53
    NEGATE              shift, and go to state 54
    OPEN_PARENTHESIS    shift, and go to state 55
    OPEN_BRACE          shift, and go to state 56
    KEYWORD_WHILE       shift, and go to state 57
    KEYWORD_IF          shift, and go to state 58
    KEYWORD_THIS        shift, and go to state 59
    KEYWORD_INT         shift, and go to state 11
    KEYWORD_BOOL        shift, and go to state 12
    KEYWORD_VOID        shift, and go to state 13
    KEYWORD_TRUE        shift, and go to state 60
    KEYWORD_FALSE       shift, and go to state 61
    INTEGER             shift, and go to state 62
    ID                  shift, and go to state 63

    $default  reduce using rule 25 (statement_klein)

    statement        go to state 64
    statement_klein  go to state 65
    expr             go to state 66
    lvalue           go to state 67
    type             go to state 68


State 44

    7 member_declaration: type ID OPEN_PARENTHESIS formals_list CLOSE_PARENTHESIS . OPEN_BRACE statement_klein CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 69


State 45

    5 class_declaration: KEYWORD_CLASS ID KEYWORD_EXTENDS ID OPEN_BRACE member_declaration_klein CLOSE_BRACE SEMICOLON .

    $default  reduce using rule 5 (class_declaration)


State 46

   68 formals_optional: COMMA formal formals_optional .

    $default  reduce using rule 68 (formals_optional)


State 47

   23 statement: SEMICOLON .

    $default  reduce using rule 23 (statement)


State 48

   48 expr: KEYWORD_NEW . ID OPEN_PARENTHESIS actuals CLOSE_PARENTHESIS
   49     | KEYWORD_NEW . type OPEN_SQUARE expr CLOSE_SQUARE

    KEYWORD_INT   shift, and go to state 11
    KEYWORD_BOOL  shift, and go to state 12
    KEYWORD_VOID  shift, and go to state 13
    ID            shift, and go to state 70

    type  go to state 71


State 49

   18 statement: KEYWORD_RETURN . expr SEMICOLON
   19          | KEYWORD_RETURN . SEMICOLON

    SEMICOLON         shift, and go to state 72
    KEYWORD_NEW       shift, and go to state 48
    MINUS             shift, and go to state 53
    NEGATE            shift, and go to state 54
    OPEN_PARENTHESIS  shift, and go to state 55
    KEYWORD_THIS      shift, and go to state 59
    KEYWORD_TRUE      shift, and go to state 60
    KEYWORD_FALSE     shift, and go to state 61
    INTEGER           shift, and go to state 62
    ID                shift, and go to state 73

    expr    go to state 74
    lvalue  go to state 75


State 50

   20 statement: KEYWORD_PRINT_INT . OPEN_PARENTHESIS expr CLOSE_PARENTHESIS SEMICOLON

    OPEN_PARENTHESIS  shift, and go to state 76


State 51

   21 statement: KEYWORD_PRINT_BOOL . OPEN_PARENTHESIS expr CLOSE_PARENTHESIS SEMICOLON

    OPEN_PARENTHESIS  shift, and go to state 77


State 52

   22 statement: KEYWORD_PRINT_LN . OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON

    OPEN_PARENTHESIS  shift, and go to state 78


State 53

   43 expr: MINUS . expr

    KEYWORD_NEW       shift, and go to state 48
    MINUS             shift, and go to state 53
    NEGATE            shift, and go to state 54
    OPEN_PARENTHESIS  shift, and go to state 55
    KEYWORD_THIS      shift, and go to state 59
    KEYWORD_TRUE      shift, and go to state 60
    KEYWORD_FALSE     shift, and go to state 61
    INTEGER           shift, and go to state 62
    ID                shift, and go to state 73

    expr    go to state 79
    lvalue  go to state 75


State 54

   44 expr: NEGATE . expr

    KEYWORD_NEW       shift, and go to state 48
    MINUS             shift, and go to state 53
    NEGATE            shift, and go to state 54
    OPEN_PARENTHESIS  shift, and go to state 55
    KEYWORD_THIS      shift, and go to state 59
    KEYWORD_TRUE      shift, and go to state 60
    KEYWORD_FALSE     shift, and go to state 61
    INTEGER           shift, and go to state 62
    ID                shift, and go to state 73

    expr    go to state 80
    lvalue  go to state 75


State 55

   34 expr: OPEN_PARENTHESIS . expr CLOSE_PARENTHESIS

    KEYWORD_NEW       shift, and go to state 48
    MINUS             shift, and go to state 53
    NEGATE            shift, and go to state 54
    OPEN_PARENTHESIS  shift, and go to state 55
    KEYWORD_THIS      shift, and go to state 59
    KEYWORD_TRUE      shift, and go to state 60
    KEYWORD_FALSE     shift, and go to state 61
    INTEGER           shift, and go to state 62
    ID                shift, and go to state 73

    expr    go to state 81
    lvalue  go to state 75


State 56

   17 statement: OPEN_BRACE . statement_klein CLOSE_BRACE
